	(desktop-clear-preserve-buffers): Remove redundant info in
	docstring already shown by the obsolescence message.
	(desktop-truncate, desktop-internal-v2s)
	(desktop-value-to-string): Change argument name to match
	docstring.

	* emulation/tpu-edt.el (tpu-set-mark): Fix typo in docstring.

	* eshell/em-smart.el (eshell-smart-maybe-jump-to-end): Fix typo in
	docstring.

2004-02-29  Kai Grossjohann  <kai.grossjohann@gmx.net>

	Version 2.0.39 of Tramp released.

	* net/tramp.el (tramp-handle-file-local-copy)
	(tramp-handle-write-region, tramp-open-connection-rsh): Variable
	name typo.  Small change.  From Patrick Tullmann
	<tullmann@flux.utah.edu>.
	(tramp-process-connection-type): New variable.
	(tramp-maybe-open-connection): Use it.
	(tramp-do-copy-or-rename-via-buffer): Handle KEEP-DATE arg, if
	possible.
	(tramp-touch): Set last-modified time of a remote file.
	(tramp-handle-write-region): Say which function is used when
	encoding.

2004-02-29  Michael Albinus  <Michael.Albinus@alcatel.de>

	* net/tramp-smb.el (tramp-smb-handle-file-writable-p): Handle the
	case of non-existing filename, too.  Reported by Christoph Bauer
	<c_bauer@informatik.uni-kl.de>.
	(tramp-smb-get-file-entries): The directory in question should
	have permissions "drwxrwxrwx".  Just virtual, because we don't
	know the real permissions.  Don't we know?
	(tramp-smb-prompt): Add virtual prompt from listing shares, too.
	(tramp-smb-errors): Add "NT_STATUS_ACCOUNT_LOCKED_OUT".
	(tramp-smb-wait-for-output): Optimize algorithm getting pending
	output.  If it was received chunkwise, there have been problems.
	Remove the "prompt not found" error message; it is obvious.
	Simplify algorithm.
	(tramp-smb-process-running): Removed.  Since we acknowledge the
	virtual prompt for shares, there's no need for distinction of
	reading shares (process ends afterwards) and interactive mode of
	smblient.
	(tramp-smb-open-connection): Setting process sentinel removed.